--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-html {
-    scroll-behavior: smooth;
-    scroll-padding-top: 100px;
+    overflow-wrap: break-word;
 }
 
 body {
@@ -30,6 +26,14 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    width: 100%;
+}
+
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 100px;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 ::-webkit-scrollbar {
